--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,13 @@
     </header>
 
     <main>
+       <!-- Task Addition Form -->
+      <section id="add-task">
+      <h2>Add a New Task</h2>
+      <input type="text" id="task-title" placeholder="Enter task title">
+      <input type="text" id="task-description" placeholder="Enter task description">
+      <button onclick="addTask()">Add Task</button>
+    </section>
       <!-- Task List Section -->
       <section id="task-list" class="view">
         <h2>Tasks</h2>
