--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,7 @@
       <section id="task-list" class="view">
         <h2>Tasks</h2>
         <ul id="tasks">
+        <li draggable="true" class="task-item" data-id="1">Task Name</li>
         </ul>
       </section>
 
