--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,15 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis-timeline/7.4.2/vis-timeline-graph2d.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis-timeline/7.4.2/vis-timeline-graph2d.min.js"></script>
@@ -18,6 +22,7 @@
                 <button id="view-tasks">Task List</button>
                 <button id="view-calendar">Calendar View</button>
                 <button id="view-timeline">Timeline View</button>
+                <button id="view-analytics">Analytics</button>
             </nav>
         </header>
 
@@ -26,11 +31,31 @@
                 <h2>Add a New Task</h2>
                 <form id="taskForm">
                     <input type="text" id="taskTitle" placeholder="Task Title" required />
-                    <input type="text" id="taskDescription" placeholder="Enter task description">
-                    <input type="date" id="taskStartDate" required />
-                    <input type="date" id="taskEndDate" required />
+                    <input type="text" id="taskDescription" placeholder="Task Description">
+                    <div class="form-group">
+                        <label for="taskStartDate">Start Date</label>
+                        <input type="date" id="taskStartDate" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="taskEndDate">End Date</label>
+                        <input type="date" id="taskEndDate" required />
+                    </div>
+                    <select id="taskPriority" required>
+                        <option value="High">High Priority</option>
+                        <option value="Medium" selected>Medium Priority</option>
+                        <option value="Low">Low Priority</option>
+                    </select>
                     <button type="submit">Add Task</button>
-                </form>        
+                </form>
+                
+                <div id="add-subtask" class="hidden">
+                    <h3>Add Subtask</h3>
+                    <form id="subtaskForm">
+                        <input type="hidden" id="subtaskTaskId">
+                        <input type="text" id="subtaskTitle" placeholder="Subtask Title" required>
+                        <button type="submit">Add Subtask</button>
+                    </form>
+                </div>
             </section>
 
             <section id="task-list" class="view">
@@ -44,14 +69,21 @@
             </section>
 
             <section id="timeline-view" class="view hidden">
-              <h2>Timeline View</h2>
-              <div class="timeline-filters">
-                  <button id="jump-to-today">Today</button>
-                  <button id="jump-to-tomorrow">Tomorrow</button>
-                  <button id="jump-to-next-week">Next Week</button>
-              </div>
-              <div id="timeline"></div>
-          </section>
+                <h2>Timeline View</h2>
+                <div class="timeline-filters">
+                    <button id="jump-to-today">Today</button>
+                    <button id="jump-to-tomorrow">Tomorrow</button>
+                    <button id="jump-to-next-week">Next Week</button>
+                </div>
+                <div id="timeline"></div>
+            </section>
+
+            <section id="analytics-view" class="view hidden">
+                <h2>Task Analytics Dashboard</h2>
+                <div class="analytics-container">
+                    <!-- Charts will be dynamically inserted here -->
+                </div>
+            </section>
         </main>
     </div>
 
